# linux-comparison

./: README.md
Analysis/: CMakeLists.txt  Makefile  main.cpp  plotting.ipynb
Experiment1/: experiment1.c
Experiment2/: Makefile  gpio_test.c
Experiment2/dts/: Makefile  bbb-gpio-benchmark-00A0.dts
Experiment3/: experiment3.c
Experiment4/: Makefile  experiment4.c  gpio_test.c
ExperimentAutomation/: 0001-add-trigger-to-digital-channels-and-add-more-command.patch
